--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -26,3 +26,14 @@ steps:
   displayName: 'Install dependencies'
 
 
+- task: ArchiveFiles@2
+   inputs:
+     rootFolderOrFile: '$(Build.SourcesDirectory)'
+     includeRootFolder: false
+     archiveType: 'zip'
+     archiveFile: '$(Build.ArtifactStagingDirectory)/Application$(Build.BuildId).zip'
+     replaceExistingArchive: true
+     verbose: # (no value); this input is optional
+- publish: $(Build.ArtifactStagingDirectory)/$(Build.BuildId).zip
+   displayName: 'Upload package'
+   artifact: drop
