Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -41,6 +41,7 @@ steps:
 - task: AzureRmWebAppDeployment@4
   inputs:
     ConnectionType: 'AzureRM'
+    ConnectedServiceName: 'devops-sp'
     appType: 'webAppLinux'
     WebAppName: 'labpyapp'
     RuntimeStack: 'PYTHON|3.6'
