Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -46,4 +46,4 @@ steps:
     WebAppName: 'labpyapp'
     RuntimeStack: 'PYTHON|3.6'
     StartupCommand: 'gunicorn --bind=0.0.0.0 --workers=4 startup:app'
-    packageForLinux: '$(System.DefaultWorkingDirectory)/**/*.zip'
+    packageForLinux: '$(Build.ArtifactStagingDirectory)/**/*.zip'
