--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -38,7 +38,7 @@ steps:
     verbose: true # (no value); this input is optional
 
 
-/*- task: AzureRmWebAppDeployment@4
+//- task: AzureRmWebAppDeployment@4
   inputs:
     ConnectionType: 'AzureRM'
     ConnectedServiceName: 'devops-sp'
@@ -47,4 +47,3 @@ steps:
     RuntimeStack: 'PYTHON|3.6'
     StartupCommand: 'gunicorn --bind=0.0.0.0 --workers=4 startup:app'
     packageForLinux: '$(Build.ArtifactStagingDirectory)/**/*.zip'
-*/
