--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -38,12 +38,12 @@ steps:
     verbose: true # (no value); this input is optional
 
 
-//- task: AzureRmWebAppDeployment@4
-  inputs:
-    ConnectionType: 'AzureRM'
-    ConnectedServiceName: 'devops-sp'
-    appType: 'webAppLinux'
-    WebAppName: 'labpyapp'
-    RuntimeStack: 'PYTHON|3.6'
-    StartupCommand: 'gunicorn --bind=0.0.0.0 --workers=4 startup:app'
-    packageForLinux: '$(Build.ArtifactStagingDirectory)/**/*.zip'
+# - task: AzureRmWebAppDeployment@4
+#   inputs:
+#     ConnectionType: 'AzureRM'
+#     ConnectedServiceName: 'devops-sp'
+#     appType: 'webAppLinux'
+#     WebAppName: 'labpyapp'
+#     RuntimeStack: 'PYTHON|3.6'
+#     StartupCommand: 'gunicorn --bind=0.0.0.0 --workers=4 startup:app'
+#     packageForLinux: '$(Build.ArtifactStagingDirectory)/**/*.zip'
